<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter1.Chapter1activity">

    <LinearLayout
        android:id="@+id/vbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button1"
            style="@style/NiveauButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="openNiveau1"
            android:text="@string/niveau_1"
            app:backgroundTint="#000000" />

        <Button
            android:id="@+id/button6"
            style="@style/NiveauButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="openNiveau2"
            android:text="@string/niveau_2"
            app:backgroundTint="#000000" />

        <Button
            android:id="@+id/button9"
            style="@style/NiveauButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/niveau_3"
            app:backgroundTint="#000000" />

        <Button
            android:id="@+id/button4"
            style="@style/NiveauButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/niveau_4"
            app:backgroundTint="#000000" />

        <Button
            android:id="@+id/button8"
            style="@style/NiveauButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/niveau_5"
            app:backgroundTint="#000000" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>