<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Niveau1">

    <LinearLayout
        android:id="@+id/vbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/deep_beige"
            android:onClick="openDescription"
            android:text="@string/avancer" />

        <TextView
            android:id="@+id/textView"
            style="@style/textCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avancer_nb_pas_n_perso_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            style="@style/blankField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/rentrez_ici_votre_code"
            android:inputType="textMultiLine"
            android:textColorHint="@color/ligth_green" />

        <TextView
            android:id="@+id/textView2"
            style="@style/textCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parenthese"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>