<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter1.Niveau1_1"
    tools:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                style="@style/textCode"
                android:layout_width="368dp"
                android:layout_height="68dp"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:text="@string/avancer_nb_pas_n_perso_position"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textView2"
                style="@style/textCode"
                android:layout_width="368dp"
                android:layout_height="30dp"
                android:layout_marginTop="49dp"
                android:layout_marginBottom="22dp"
                android:text="@string/parenthese"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                style="@style/blankField"
                android:layout_width="187dp"
                android:layout_height="29dp"
                android:layout_marginStart="138dp"
                android:layout_marginLeft="138dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="43dp"
                android:layout_marginRight="43dp"
                android:layout_marginBottom="19dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/rentrez_ici_votre_code"
                android:inputType="textMultiLine"
                android:textColorHint="@color/ligth_green"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="154dp"
                android:layout_marginLeft="154dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="154dp"
                android:layout_marginRight="154dp"
                android:layout_marginBottom="24dp"
                android:background="@color/deep_beige"
                android:onClick="openDescription"
                android:text="@string/avancer"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="137dp"
                android:layout_height="136dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/labyrinthe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/maze_example" />

            <Button
                android:id="@+id/compileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="81dp"
                android:onClick="compile"
                android:text="@string/compile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.881"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.62" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="340dp"
                android:layout_height="191dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="27dp"
                android:contentDescription="@string/couloir"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/corridor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>