<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chapter1.Niveau1_1"
    tools:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="389dp"
                android:layout_height="162dp"
                android:layout_marginStart="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />

            <TextView
                android:id="@+id/textView"
                style="@style/textCode"
                android:layout_width="122dp"
                android:layout_height="42dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="200dp"
                android:layout_marginRight="200dp"
                android:text="@string/points_de_vie"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <EditText
                android:id="@+id/editTextTextMultiLine"
                style="@style/blankField"
                android:layout_width="49dp"
                android:layout_height="0dp"
                android:layout_marginStart="17dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColorHint="@color/ligth_green"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/view" />

            <TextView
                android:id="@+id/textView3"
                style="@style/textCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/points_de_vie_5"
                app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="154dp"
                android:layout_marginLeft="154dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="154dp"
                android:layout_marginRight="154dp"
                android:background="@color/deep_beige"
                android:onClick="openDescription"
                android:text="@string/type_integer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="137dp"
                android:layout_height="136dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/labyrinthe"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/maze_example" />

            <Button
                android:id="@+id/compileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp"
                android:layout_marginBottom="81dp"
                android:onClick="compile"
                android:text="@string/compile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintHorizontal_bias="0.868"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.634" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="326dp"
                android:layout_height="185dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/couloir"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:srcCompat="@drawable/corridor" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>